fix(component/field): Update the MField component spacings

--- a/packages/styles/components/_c.fields.scss
+++ b/packages/styles/components/_c.fields.scss
@@ -1,38 +1,38 @@
+@use "sass:math";
+
 .mc-field {
   $parent: get-parent-selector(&);
 
   &__label,
   &__legend {
+    @include set-font-scale("04", "m");
+    @include set-font-weight();
+
     color: $color-fields-label;
   }
 
-  &__label {
-    @include set-font-scale('04', 's');
-  }
-
   &__legend {
-    @include set-font-scale('04', 'm');
-
     padding-left: 0;
     padding-right: 0;
   }
 
   &__requirement,
   &__help {
-    @include set-font-scale('02', 's');
+    @include set-font-scale("02", "m");
+    @include set-font-weight();
 
     color: $color-fields-requirement;
   }
 
   &__requirement {
     &::before {
-      content: '\0000A0-\0000A0';
+      content: "\0000A0-\0000A0";
     }
   }
 
   &__help {
     display: block;
-    margin-top: $mu025;
+    margin-top: math.div($mu025, 2);
   }
 
   #{$parent}__input,
@@ -44,18 +44,18 @@
     margin-top: $mu100;
 
     &--inline {
-      @include set-from-screen('m-medium') {
+      @include set-from-screen("m-medium") {
         display: flex;
       }
 
       #{$parent}__item {
         &:not(:last-child) {
-          @include set-from-screen('m-medium') {
+          @include set-from-screen("m-medium") {
             margin-bottom: 0;
             margin-right: $mu100;
           }
 
-          @include set-from-screen('l') {
+          @include set-from-screen("l") {
             margin-right: $mu200;
           }
         }
@@ -70,7 +70,7 @@
   }
 
   &__error-message {
-    @include set-font-scale('04', 'm');
+    @include set-font-scale("04", "m");
 
     color: $color-fields-error;
     display: inline-block;
